--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     }
   </script>
   <style>
+    body{
+      background-image:ukulele.jpg;
+      }
     .container{
       text-align: center;
     }
