--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </script>
   <style>
     body{
-      background-image:ukulele.jpg;
+      background-image:url("https://images.pexels.com/photos/6608248/pexels-photo-6608248.jpeg?cs=srgb&dl=pexels-emshuvo-6608248.jpg&fm=jpg");
       }
     .container{
       text-align: center;
