--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 </head>
 
 <body>
+  <img src="https://images.pexels.com/photos/6608248/pexels-photo-6608248.jpeg?cs=srgb&dl=pexels-emshuvo-6608248.jpg&fm=jpg>
+
+
   <div class="container">
   <p>Enter your name and email to win the iPhone 12 pro max</p>
   <form >
