--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     }
   </script>
   <style>
+     body{
+      background-image:url("pixel.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+     }
     .container{
       text-align: center;
     }
