--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </script>
   <style>
      body{
-      background-image:url("pixels.jpg");
+      background-image:url("pixel.png");
       background-repeat: no-repeat;
       background-size: cover;
      }
