--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
     <button onclick="res()">submit</button>
   </form>
   </div>
+  p>click here to win <a href="c.html">IPhone 12 pro max</a></p>
 </body>
 </html>
